--- a/Cargo.toml
+++ b/Cargo.toml
@@ -115,4 +115,12 @@ path = "solutions/day-15/part-1.rs"
 name = "day-15-part-2"
 path = "solutions/day-15/part-2.rs"
 
+[[bin]]
+name = "day-16-part-1"
+path = "solutions/day-16/part-1.rs"
+
+[[bin]]
+name = "day-16-part-2"
+path = "solutions/day-16/part-2.rs"
+
 [dependencies]
