--- a/Cargo.toml
+++ b/Cargo.toml
@@ -123,4 +123,12 @@ path = "solutions/day-16/part-1.rs"
 name = "day-16-part-2"
 path = "solutions/day-16/part-2.rs"
 
+[[bin]]
+name = "day-17-part-1"
+path = "solutions/day-17/part-1.rs"
+
+[[bin]]
+name = "day-17-part-2"
+path = "solutions/day-17/part-2.rs"
+
 [dependencies]
