--- a/Cargo.toml
+++ b/Cargo.toml
@@ -131,4 +131,12 @@ path = "solutions/day-17/part-1.rs"
 name = "day-17-part-2"
 path = "solutions/day-17/part-2.rs"
 
+[[bin]]
+name = "day-18-part-1"
+path = "solutions/day-18/part-1.rs"
+
+[[bin]]
+name = "day-18-part-2"
+path = "solutions/day-18/part-2.rs"
+
 [dependencies]
