--- a/Cargo.toml
+++ b/Cargo.toml
@@ -139,4 +139,12 @@ path = "solutions/day-18/part-1.rs"
 name = "day-18-part-2"
 path = "solutions/day-18/part-2.rs"
 
+[[bin]]
+name = "day-19-part-1"
+path = "solutions/day-19/part-1.rs"
+
+[[bin]]
+name = "day-19-part-2"
+path = "solutions/day-19/part-2.rs"
+
 [dependencies]
