Add day 23 solutions

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -167,4 +167,12 @@ path = "solutions/day-22/part-1.rs"
 name = "day-22-part-2"
 path = "solutions/day-22/part-2.rs"
 
+[[bin]]
+name = "day-23-part-1"
+path = "solutions/day-23/part-1.rs"
+
+[[bin]]
+name = "day-23-part-2"
+path = "solutions/day-23/part-2.rs"
+
 [dependencies]
