Add day 21 part 2 solution

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -160,6 +160,10 @@ name = "day-21-part-1"
 path = "solutions/day-21/part-1.rs"
 
 [[bin]]
+name = "day-21-part-2"
+path = "solutions/day-21/part-2.rs"
+
+[[bin]]
 name = "day-22-part-1"
 path = "solutions/day-22/part-1.rs"
 
