--- a/Cargo.toml
+++ b/Cargo.toml
@@ -179,4 +179,12 @@ path = "solutions/day-23/part-1.rs"
 name = "day-23-part-2"
 path = "solutions/day-23/part-2.rs"
 
+[[bin]]
+name = "day-24-part-1"
+path = "solutions/day-24/part-1.rs"
+
+[[bin]]
+name = "day-25-part-1"
+path = "solutions/day-25/part-1.rs"
+
 [dependencies]
